// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Appeals Component should Render with NO table of external interests 1`] = `
Array [
  <h3
    class="govuk-heading-s"
  >
    Record Interest
  </h3>,
  <p
    class="govuk-body"
  >
    Record interest against the case
  </p>,
  <a
    class="govuk-body govuk-link"
    href="/case/some_case_id/stage/some_stage_id/caseAction/record_interest/add"
  >
    Record Interest
  </a>,
]
`;

exports[`Appeals Component should Render with table of existing external interests 1`] = `
Array [
  <h3
    class="govuk-heading-s"
  >
    Record Interest
  </h3>,
  <p
    class="govuk-body"
  >
    Recorded Interests:
  </p>,
  <table
    class="govuk-table"
  >
    <tbody>
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell width-one-sixth"
        >
          TEST_PARTY_TYPE
        </td>
        <td
          class="govuk-table__cell govuk-!-width-one-half"
        />
        <td
          class="govuk-table__cell"
        >
          <a
            class="govuk-link"
            href="/case/some_case_id/stage/some_stage_id/caseAction/record_interest/update/undefined?hideSidebar=false"
          >
            Update
          </a>
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell width-one-sixth"
        >
          TEST_PARTY_TYPE_2
        </td>
        <td
          class="govuk-table__cell govuk-!-width-one-half"
        />
        <td
          class="govuk-table__cell"
        >
          <a
            class="govuk-link"
            href="/case/some_case_id/stage/some_stage_id/caseAction/record_interest/update/undefined?hideSidebar=false"
          >
            Update
          </a>
        </td>
      </tr>
    </tbody>
  </table>,
  <p
    class="govuk-body"
  >
    Record interest against the case
  </p>,
  <a
    class="govuk-body govuk-link"
    href="/case/some_case_id/stage/some_stage_id/caseAction/record_interest/add"
  >
    Record Interest
  </a>,
]
`;
